--- a/angular.json
+++ b/angular.json
@@ -22,12 +22,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
-            "styles": [
-              "src/styles.css",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
-            ],
+            "styles": ["src/styles.css", "./node_modules/bootstrap-icons/font/bootstrap-icons.css"],
             "scripts": []
           },
           "configurations": {
