--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.0",
-    "ng2-charts": "^8.0.0",
+    "ng2-charts": "^4.0.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.19.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
